# AegisShare

./: .dockerignore  .env  .env-example  .gitignore  LICENSE  README.md  commands.sh  compose.yml  db.sqlite3  dockerfile  pyproject.toml
.github/workflows/: django.yml
aegis_share/: admin.py  apps.py  consumer.py  consumers.py  fields.py  forms.py  middleware.py  models.py  routing.py  urls.py  utils.py  views.py
aegis_share/migrations/: 0001_initial.py  0002_remove_customuser_cpf_customuser_telefone_and_more.py
aegis_share/views/: __init__.py  home.py
mysite/: asgi.py  settings.py  urls.py
static/: staticfiles.json
templates/: primeiro_cadastro.html
templates/arquivos/: arquivos.html  arquivos_clientes.html  htmx_arquivos.html  meus_arquivos.html  upload.html  upload_form.html
templates/chat/: chat.html  chat_index.html  coluna_chat.html
templates/chat/partials/: chat_conversation.html  chat_message.html  user_list.html
templates/forms/: upload_form.html
templates/home/: home.html  homecomlogin.html  homesemlogin.html
templates/informacoes/: sobre.html
templates/navbar/: navbar.html
templates/notifications/: notifications.html
templates/registro/: cadastro.html  login.html
templates/user/: user.html
