[project]
name = "proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi>=25.1.0",
    "channels>=4.3.1",
    "channels-redis>=4.3.0",
    "crispy-bulma>=0.12.0",
    "django>=5.2.6",
    "django-crispy-forms>=2.4",
    "django-feather>=0.3.0",
    "django-htmx>=1.26.0",
    "django-simple-bulma>=2.7.1",
    "granian>=2.5.4",
    "pillow>=12.0.0",
    "pillow-avif-plugin>=1.5.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "granian[reload]>=2.5.4",
]
